--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 
         <div class="row">
-            <div class="col-md-9 col-12 line-right">
+            <div class="col-xl-9 col-12 line-right">
 
                 <div class="row">
 
@@ -115,6 +115,8 @@
                                     <h1> ২০২১ সালে ছুটি ২২ দিন, ৭ দিনই শুক্র–শনি </h1>
                                     <p>২০২১ সালে সাধারণ ছুটি ১৪ দিন। তার মধ্যে ছয় দিন পড়েছে সাপ্তাহিক ছুটির দিনে। এ ছাড়া আগামী বছর নির্বাহী আদেশে ছুটি আছে আট দিন। তার মধ্যে এক দিন পড়েছে সাপ্তাহিক ছুটির দিনে। ৩৪ মিনিট আগে
                                     </p>
+
+                                    <small><i class="fas fa-clock    "></i> ১০ মিনিট আগে</small>
                                 </div>
 
 
@@ -130,11 +132,19 @@
                     <div class="col-md-4 mt-4 mt-md-0">
                         <div class="news-box">
 
+                            <h1> ২০২১ সালে ছুটি ২২ দিন, ৭ দিনই শুক্র–শনি </h1>
+                            <p>২০২১ সালে সাধারণ ছুটি ১৪ দিন। তার মধ্যে ছয় দিন পড়েছে সাপ্তাহিক ছুটির দিনে। এ ছাড়া আগামী বছর নির্বাহী আদেশে ছুটি আছে আট দিন। তার মধ্যে এক দিন পড়েছে সাপ্তাহিক ছুটির দিনে। ৩৪ মিনিট আগে
+                            </p>
+
+                            <small><i class="fas fa-clock    "></i> ১০ মিনিট আগে</small>
                         </div>
                     </div>
 
                     <div class="col-md-12">
                         <div class="line-bottom mt-4 mb-4">
+
+
+
                         </div>
                     </div>
 
@@ -146,23 +156,41 @@
                     <div class="col-md-4 line-right">
                         <div class="news-box">
 
+                            <h1> ২০২১ সালে ছুটি ২২ দিন, ৭ দিনই শুক্র–শনি </h1>
+                            <p>২০২১ সালে সাধারণ ছুটি ১৪ দিন। তার মধ্যে ছয় দিন পড়েছে সাপ্তাহিক ছুটির দিনে। এ ছাড়া আগামী বছর নির্বাহী আদেশে ছুটি আছে আট দিন। তার মধ্যে এক দিন পড়েছে সাপ্তাহিক ছুটির দিনে। ৩৪ মিনিট আগে
+                            </p>
+
+                            <small><i class="fas fa-clock    "></i> ১০ মিনিট আগে</small>
                         </div>
                     </div>
 
                     <div class="col-md-4 line-right mt-4 mt-md-0">
                         <div class="news-box">
 
+                            <h1> ২০২১ সালে ছুটি ২২ দিন, ৭ দিনই শুক্র–শনি </h1>
+                            <p>২০২১ সালে সাধারণ ছুটি ১৪ দিন। তার মধ্যে ছয় দিন পড়েছে সাপ্তাহিক ছুটির দিনে। এ ছাড়া আগামী বছর নির্বাহী আদেশে ছুটি আছে আট দিন। তার মধ্যে এক দিন পড়েছে সাপ্তাহিক ছুটির দিনে। ৩৪ মিনিট আগে
+                            </p>
+
+                            <small><i class="fas fa-clock    "></i> ১০ মিনিট আগে</small>
                         </div>
                     </div>
 
                     <div class="col-md-4 mt-4 mt-md-0">
                         <div class="news-box">
 
+                            <h1> ২০২১ সালে ছুটি ২২ দিন, ৭ দিনই শুক্র–শনি </h1>
+                            <p>২০২১ সালে সাধারণ ছুটি ১৪ দিন। তার মধ্যে ছয় দিন পড়েছে সাপ্তাহিক ছুটির দিনে। এ ছাড়া আগামী বছর নির্বাহী আদেশে ছুটি আছে আট দিন। তার মধ্যে এক দিন পড়েছে সাপ্তাহিক ছুটির দিনে। ৩৪ মিনিট আগে
+                            </p>
+
+                            <small><i class="fas fa-clock    "></i> ১০ মিনিট আগে</small>
                         </div>
                     </div>
 
                     <div class="col-md-12">
                         <div class="line-bottom mt-4 mb-4">
+
+
+
                         </div>
                     </div>
 
@@ -176,6 +204,20 @@
                             <div class="col-md-4">
                                 <div class="news-bar">
 
+                                    <div class="row">
+
+                                        <div class="col-4 col-md-6 pr-2">
+                                            <img src="https://images.prothomalo.com/prothomalo-bangla%2F2020-09%2F4dc58fa1-4e01-4fe8-bb4e-366278f87917%2Fgovt.png?rect=0%2C0%2C1600%2C1067&amp;w=500&amp;auto=format%2Ccompress&amp;fmt=webp">
+                                        </div>
+                                        <div class="col-8 col-md-6 pl-2">
+                                            <h1> ২০২১ সালে ছুটি ২২ দিন, ৭ দিনই শুক্র–শনি </h1>
+                                            <small><i class="fas fa-clock    "></i> ১০ মিনিট আগে</small>
+                                        </div>
+
+
+                                    </div>
+
+
                                 </div>
                                 <div class=" line-bottom mt-0 mt-md-4"></div>
                             </div>
@@ -183,6 +225,22 @@
                             <div class="col-md-4 mt-4 mt-md-0">
                                 <div class="news-bar">
 
+
+                                    <div class="row">
+
+                                        <div class="col-4 col-md-6 pr-2">
+                                            <img src="https://images.prothomalo.com/prothomalo-bangla%2F2020-09%2F4dc58fa1-4e01-4fe8-bb4e-366278f87917%2Fgovt.png?rect=0%2C0%2C1600%2C1067&amp;w=500&amp;auto=format%2Ccompress&amp;fmt=webp">
+                                        </div>
+                                        <div class="col-8 col-md-6 pl-2">
+                                            <h1> ২০২১ সালে ছুটি ২২ দিন, ৭ দিনই শুক্র–শনি </h1>
+                                            <small><i class="fas fa-clock    "></i> ১০ মিনিট আগে</small>
+                                        </div>
+
+
+                                    </div>
+
+
+
                                 </div>
                                 <div class=" line-bottom mt-0 mt-md-4"></div>
                             </div>
@@ -190,8 +248,21 @@
                             <div class="col-md-4 mt-4 mt-md-0">
                                 <div class="news-bar">
 
+                                    <div class="row">
+
+                                        <div class="col-4 col-md-6 pr-2">
+                                            <img src="https://images.prothomalo.com/prothomalo-bangla%2F2020-09%2F4dc58fa1-4e01-4fe8-bb4e-366278f87917%2Fgovt.png?rect=0%2C0%2C1600%2C1067&amp;w=500&amp;auto=format%2Ccompress&amp;fmt=webp">
+                                        </div>
+                                        <div class="col-8 col-md-6 pl-2">
+                                            <h1> ২০২১ সালে ছুটি ২২ দিন, ৭ দিনই শুক্র–শনি </h1>
+                                            <small><i class="fas fa-clock    "></i> ১০ মিনিট আগে</small>
+                                        </div>
+
+
+                                    </div>
+
                                 </div>
-                                <div class=" line-bottom mt-0 mt-md-4"></div>
+                                <div class="line-bottom mt-0 mt-md-4"></div>
                             </div>
 
 
@@ -205,17 +276,56 @@
                             <div class="col-md-4">
                                 <div class="news-bar">
 
+                                    <div class="row">
+
+                                        <div class="col-4 col-md-6 pr-2">
+                                            <img src="https://images.prothomalo.com/prothomalo-bangla%2F2020-09%2F4dc58fa1-4e01-4fe8-bb4e-366278f87917%2Fgovt.png?rect=0%2C0%2C1600%2C1067&amp;w=500&amp;auto=format%2Ccompress&amp;fmt=webp">
+                                        </div>
+                                        <div class="col-8 col-md-6 pl-2">
+                                            <h1> ২০২১ সালে ছুটি ২২ দিন, ৭ দিনই শুক্র–শনি </h1>
+                                            <small><i class="fas fa-clock    "></i> ১০ মিনিট আগে</small>
+                                        </div>
+
+
+                                    </div>
+
                                 </div>
                             </div>
 
                             <div class="col-md-4 mt-4 mt-md-0">
                                 <div class="news-bar">
 
+                                    <div class="row">
+
+                                        <div class="col-4 col-md-6 pr-2">
+                                            <img src="https://images.prothomalo.com/prothomalo-bangla%2F2020-09%2F4dc58fa1-4e01-4fe8-bb4e-366278f87917%2Fgovt.png?rect=0%2C0%2C1600%2C1067&amp;w=500&amp;auto=format%2Ccompress&amp;fmt=webp">
+                                        </div>
+                                        <div class="col-8 col-md-6 pl-2">
+                                            <h1> ২০২১ সালে ছুটি ২২ দিন, ৭ দিনই শুক্র–শনি </h1>
+                                            <small><i class="fas fa-clock    "></i> ১০ মিনিট আগে</small>
+                                        </div>
+
+
+                                    </div>
+
                                 </div>
                             </div>
 
                             <div class="col-md-4 mt-4 mt-md-0">
                                 <div class="news-bar">
+
+                                    <div class="row">
+
+                                        <div class="col-4 col-md-6 pr-2">
+                                            <img src="https://images.prothomalo.com/prothomalo-bangla%2F2020-09%2F4dc58fa1-4e01-4fe8-bb4e-366278f87917%2Fgovt.png?rect=0%2C0%2C1600%2C1067&amp;w=500&amp;auto=format%2Ccompress&amp;fmt=webp">
+                                        </div>
+                                        <div class="col-8 col-md-6 pl-2">
+                                            <h1> ২০২১ সালে ছুটি ২২ দিন, ৭ দিনই শুক্র–শনি </h1>
+                                            <small><i class="fas fa-clock    "></i> ১০ মিনিট আগে</small>
+                                        </div>
+
+
+                                    </div>
 
                                 </div>
                             </div>
@@ -239,7 +349,7 @@
 
 
 
-            <div class="col-md-3 col-12 ">
+            <div class="col-xl-3 col-12 ">
 
                 <div class="news-box ">
 
