--- a/index.html
+++ b/index.html
@@ -96,8 +96,6 @@
 
 
     <div class="container mt-4">
-
-
         <div class="row">
             <div class="col-xl-9 col-12 line-right">
 
@@ -346,9 +344,6 @@
 
 
             </div>
-
-
-
             <div class="col-xl-3 col-12 ">
 
                 <div class="ad-box mt-4 mt-md-0">
@@ -381,6 +376,26 @@
 
                 </div>
 
+                <div class="line-bottom mt-4 mb-4"></div>
+
+                <div class="news-bar">
+
+                    <div class="row">
+
+                        <div class="col-4 col-md-6 pr-2">
+                            <img src="https://images.prothomalo.com/prothomalo-bangla%2F2020-09%2F4dc58fa1-4e01-4fe8-bb4e-366278f87917%2Fgovt.png?rect=0%2C0%2C1600%2C1067&amp;w=500&amp;auto=format%2Ccompress&amp;fmt=webp">
+                        </div>
+                        <div class="col-8 col-md-6 pl-2">
+                            <h1> ২০২১ সালে ছুটি ২২ দিন, ৭ দিনই শুক্র–শনি </h1>
+                            <small><i class="fas fa-clock    "></i> ১০ মিনিট আগে</small>
+                        </div>
+
+
+                    </div>
+
+                </div>
+
+
             </div>
 
             <div class="col-md-12">
@@ -388,6 +403,14 @@
                 </div>
             </div>
 
+            <div class="col-md-12">
+                <div class="ad-box"></div>
+            </div>
+
+            <div class="col-md-12">
+                <div class="line-bottom mt-4 mb-4">
+                </div>
+            </div>
         </div>
     </div>
 
