blank grids added

--- a/index.html
+++ b/index.html
@@ -411,8 +411,238 @@
                 <div class="line-bottom mt-4 mb-4">
                 </div>
             </div>
+
+
+
+            <div class="col-12">
+
+                <div class="row">
+                    <div class="col-md-3">
+
+                        <div class="news-box h-10">
+
+                        </div>
+
+                    </div>
+
+                    <div class="col-md-9">
+
+                        <div class="news-box h-10">
+
+                        </div>
+
+                    </div>
+
+
+
+                </div>
+
+            </div>
+
+            <div class="col-md-12">
+                <div class="line-bottom mt-4 mb-4">
+                </div>
+            </div>
+
+            <div class="col-12">
+
+                <div class="row">
+                    <div class="col-md-3">
+
+                        <div class="news-box h-20">
+
+                        </div>
+
+                    </div>
+
+                    <div class="col-md-6">
+
+                        <div class="row">
+                            <div class="col-md-12">
+
+                                <div class="news-box h-10 mb-4">
+
+                                </div>
+
+                            </div>
+
+                            <div class="col-md-6">
+
+                                <div class="news-box h-10 mb-4">
+
+                                </div>
+
+                            </div>
+
+                            <div class="col-md-6">
+
+                                <div class="news-box h-10 mb-4">
+
+                                </div>
+
+                            </div>
+                        </div>
+
+
+
+                    </div>
+
+                    <div class="col-md-3">
+
+                        <div class="news-box h-20">
+
+                        </div>
+
+                    </div>
+
+
+                </div>
+
+            </div>
+
+            <div class="col-md-12">
+                <div class="line-bottom mt-4 mb-4">
+                </div>
+            </div>
+
+            <div class="col-12">
+
+                <div class="row">
+                    <div class="col-md-3 line-right">
+
+                        <div class="news-box h-10">
+
+                        </div>
+
+                    </div>
+
+                    <div class="col-md-3 line-right">
+
+                        <div class="news-box h-10">
+
+                        </div>
+
+                    </div>
+
+                    <div class="col-md-3 line-right">
+
+                        <div class="news-box h-10">
+
+                        </div>
+
+                    </div>
+
+                    <div class="col-md-3">
+
+                        <div class="news-box h-10">
+
+                        </div>
+
+                    </div>
+
+
+
+
+
+                </div>
+
+            </div>
+
+            <div class="col-md-12">
+                <div class="line-bottom mt-4 mb-4">
+                </div>
+            </div>
+
+            <div class="col-12">
+
+                <div class="row">
+                    <div class="col-md-9">
+
+                        <div class="row">
+
+                            <div class="col-md-8">
+
+                                <div class="news-box h-20"></div>
+
+                            </div>
+
+                            <div class="col-md-4">
+
+                                <div class="news-box h-10 mb-4"></div>
+                                <div class="news-box h-10 mb-4"></div>
+
+
+
+
+                            </div>
+
+                            <div class="col-md-12">
+                                <div class="line-bottom mt-4 mb-4">
+                                </div>
+                            </div>
+
+                            <div class="col-md-12">
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <div class="news-box h-10 mb-4"></div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="news-box h-10 mb-4"></div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="news-box h-10 mb-4"></div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+
+
+                        </div>
+
+
+                    </div>
+
+                    <div class="col-md-3">
+
+                        <div class="news-box h-10 mb-4"></div>
+                        <div class="news-box h-10 mb-4"></div>
+
+                    </div>
+
+                </div>
+
+            </div>
+            <div class="col-md-12">
+                <div class="line-bottom mt-4 mb-4">
+                </div>
+            </div>
+
+            <div class="col-md-12">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="news-box h-20">
+
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="news-box h-20">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-12">
+                <div class="line-bottom mt-4 mb-4">
+                </div>
+            </div>
+
+
+
         </div>
     </div>
+
 
 
 
