--- a/index.html
+++ b/index.html
@@ -2507,6 +2507,134 @@
         </div>
     </div>
 
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-6 col-sm-12 line-right">
+                <div class="footer-widget">
+                    <div class="widget-about">
+
+
+                        <a href="https://link.com">
+                            <img src="logo.png" style="width: 220px;">
+                        </a>
+                        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio blanditiis quia ex molestiae ad ipsum hic voluptate nam accusamus repellendus culpa repudiandae animi ipsam est, nemo vitae id maxime! Similique.</p>
+                        <ul class="contact-details ">
+
+                            <li>
+                                <span class="fas fa-envelope-open"></span>
+                                <a href="mailto:info@thetopnews24.com">info@thetopnews24.com</a>
+                            </li>
+
+                        </ul>
+                        <br>
+
+                        <a href="https://link.compage/about-us"><i class="fas fa-newspaper"></i> About Us</a> &nbsp; &nbsp;
+                        <a href="https://link.compage/contact-us"><i class="fas fa-phone"></i> Contact Us</a> &nbsp; &nbsp; <a href="https://link.compage/privacy-policy">Privacy Policy</a> &nbsp; &nbsp;
+
+
+                        <a href="https://link.compage/terms-of-service"> Terms of Service</a> &nbsp; &nbsp;
+                        <a href="https://link.compage/disclaimer"> Disclaimer </a>
+
+                    </div>
+                </div>
+                <!-- Ends: .footer-widget -->
+            </div>
+
+
+
+
+            <!-- end /.col-md-4 -->
+            <div class="col-md-3 col-sm-4 d-none d-md-block">
+                <div class="footer-widget">
+                    <div class="footer-menu footer-menu--1">
+
+                        <ul>
+
+                            <li>
+                                <a href="https://link.comcategory/কোভিড১৯"><i class="fas fa-arrow-circle-right"></i> &nbsp; &nbsp; কোভিড১৯</a>
+                            </li>
+                            <li>
+                                <a href="https://link.comcategory/জাতীয়"><i class="fas fa-arrow-circle-right"></i> &nbsp; &nbsp; জাতীয়</a>
+                            </li>
+                            <li>
+                                <a href="https://link.comcategory/রাজনীতি"><i class="fas fa-arrow-circle-right"></i> &nbsp; &nbsp; রাজনীতি</a>
+                            </li>
+                            <li>
+                                <a href="https://link.comcategory/দেশজুড়ে"><i class="fas fa-arrow-circle-right"></i> &nbsp; &nbsp; দেশজুড়ে</a>
+                            </li>
+                            <li>
+                                <a href="https://link.comcategory/বিনোদন"><i class="fas fa-arrow-circle-right"></i> &nbsp; &nbsp; বিনোদন</a>
+                            </li>
+                            <li>
+                                <a href="https://link.comcategory/খেলাধুলা"><i class="fas fa-arrow-circle-right"></i> &nbsp; &nbsp; খেলাধুলা</a>
+                            </li>
+                            <li>
+                                <a href="https://link.comcategory/স্মরণীয়-দিন-"><i class="fas fa-arrow-circle-right"></i> &nbsp; &nbsp; স্মরণীয় দিন </a>
+                            </li>
+                            <li>
+                                <a href="https://link.comcategory/সম্পাদকীয়-"><i class="fas fa-arrow-circle-right"></i> &nbsp; &nbsp; সম্পাদকীয় </a>
+                            </li>
+
+
+                        </ul>
+                    </div>
+                    <!-- end /.footer-menu -->
+                </div>
+                <!-- Ends: .footer-widget -->
+            </div>
+            <!-- end /.col-md-3 -->
+
+
+
+            <!-- end /.col-md-4 -->
+            <div class="col-md-3 col-sm-4 d-none d-md-block">
+                <div class="footer-widget">
+                    <div class="footer-menu footer-menu--1 text-right">
+
+                        <ul>
+
+                            <li>
+                                <a href="https://link.comcategory/আন্তর্জাতিক"> আন্তর্জাতিক  &nbsp; &nbsp; <i class="fas fa-arrow-circle-left"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://link.comcategory/প্রবাস-সংবাদ"> প্রবাস সংবাদ  &nbsp; &nbsp; <i class="fas fa-arrow-circle-left"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://link.comcategory/বিবিধ-"> বিবিধ   &nbsp; &nbsp; <i class="fas fa-arrow-circle-left"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://link.comcategory/-বিজ্ঞান-ও-প্রযুক্তি-">  বিজ্ঞান ও প্রযুক্তি   &nbsp; &nbsp; <i class="fas fa-arrow-circle-left"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://link.comcategory/লেখালেখি"> লেখালেখি  &nbsp; &nbsp; <i class="fas fa-arrow-circle-left"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://link.comcategory/-শিক্ষা">  শিক্ষা  &nbsp; &nbsp; <i class="fas fa-arrow-circle-left"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://link.comcategory/স্বাস্থ্য"> স্বাস্থ্য  &nbsp; &nbsp; <i class="fas fa-arrow-circle-left"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://link.comcategory/-ধর্ম">  ধর্ম  &nbsp; &nbsp; <i class="fas fa-arrow-circle-left"></i></a>
+                            </li>
+
+
+                        </ul>
+                    </div>
+                    <!-- end /.footer-menu -->
+                </div>
+                <!-- Ends: .footer-widget -->
+            </div>
+            <!-- end /.col-md-3 -->
+
+
+
+
+
+        </div>
+        <!-- end /.row -->
+    </div>
+
 
 
 
